--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -11,7 +11,7 @@
             <div class="border bg-white chadow-lg rounded-lg overflow-hidden">
 
               {% if product.featured_image %}
-                <img src="{{ product.image | image_url: 'medium' }}" alt="{{ product.featured_image.alt }}">
+                <img src="{{ product.featured_image | image_url: 'medium' }}" alt="{{ product.featured_image.alt }}">
 
               {% endif %}
               <span>{{ product.vendor }}</span>
