--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,5 +1,5 @@
 <div class="px-4 py-8">
-  {% paginate collection.products by 6 %}
+  {% paginate collection.products by 9 %}
     <h1 class="text-3xl text-center">{{ collection.title }}</h1>
 
     <div class="max-w-6xl mx-auto">
@@ -8,38 +8,27 @@
           <div class="w-full py-6 px-3">
             <div class="border bg-white shadow-lg rounded-lg overflow-hidden">
               <a href="{{ product.url }}">
-                {% if product.featured_image %}
-                  <div class="h-80 overflow-hidden">
-                    <img
-                      class="w-full h-full object-cover"
-                      src="{{ product.featured_image | img_url: 'medium' }}"
-                      alt="{{ product.featured_image.alt }}">
-                  </div>
-
-                {% else %}
-                  {{ 'product-1' | placeholder_svg_tag: 'w-full h-full object-cover bg-gray-100' }}
-                {% endif %}
+                <div class="h-64 overflow-hidden">
+                  <img
+                    class="w-full h-full object-cover"
+                    src="{{ product.featured_image | img_url: 'medium' }}"
+                    alt="{{ product.featured_image.alt | escape }}">
+                </div>
               </a>
 
               <div class="flex flex-col p-4">
                 <span class="text-sm text-gray-400">{{ product.vendor }}</span>
-
                 <a href="{{ product.url }}" class="text-gray-700 uppercase font-medium">{{ product.title }}</a>
-
                 <p class="text-gray-500">{{ product.price | money }}</p>
               </div>
-
             </div>
           </div>
-
         {% else %}
-          <p>There are no products inside of this collection</p>
+          <p class="text-center text-gray-500">There are no products inside of this collection</p>
         {% endfor %}
       </div>
     </div>
 
-
-    {% render 'pagination'
-      , pagination: paginate %}
+    {% render 'pagination' | pagination: paginate %}
   {% endpaginate %}
 </div>
